crates/toml_edit/tests/fixtures/invalid/table/equals-sign.stderr
TOML parse error at line 1, column 6
  |
1 | [name=bad]
  |      ^
Invalid table header
Expected `.`, `]`
